# andres-ai-agent-api

./: .dockerignore  .env.example  .gitignore  .mcp.json  CLAUDE.md  LICENSE  README.md  agent_context.md  config.py  deploy-server.sh  docker-compose.prod.yml  docker-compose.yml  main.py  pyproject.toml  test_rate_limit.py
alembic/: env.py  script.py.mako
alembic/versions/: 18c534904549_add_user_agent_response_time_and_.py  9ad03f771076_add_browser_id_field_to_users_table.py  ba279d010bf5_initial_migrations.py  be509f25455e_add_creation_metadata_fields_to_user_.py  f2a8c4b1e5d6_add_kb_enum_values.py
compose/local/: Caddyfile  Dockerfile
compose/prod/: Caddyfile
local_code/: AgentContext.md  sql-queries.md
modules/admin/: auth.py  realtime.py  routers.py
modules/agent/: agent.py  models.py  services.py
modules/chats/: models.py  routers.py  services.py
modules/chats/utils/: geo.py
modules/knowledge_base/: models.py  routers.py  services.py
modules/users/: models.py  services.py
modules/utils/: agent.py  auth.py  database.py  embeddings.py  geo.py  rate_limit.py  redis.py  request.py  sentry.py
scripts/: populate_user_geo_data.py  seed_professional_experience.py
