[project]
name = "chat-agent"
version = "0.1.0"
description = "Chat Agent project"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.18.0",
    "asyncpg>=0.31.0",
    "fastapi>=0.136.0",
    "fastapi-limiter==0.1.6",
    "greenlet>=3.2.0",
    "jinja2>=3.1.6",
    "logfire>=4.33.0",
    "openai>=2.38.0,<3",
    "opentelemetry-instrumentation-asgi>=0.53b1",
    "opentelemetry-instrumentation-asyncpg>=0.53b1",
    "opentelemetry-instrumentation-fastapi>=0.53b1",
    "pgvector>=0.4.2",
    "psycopg2-binary>=2.9.10",
    "pydantic-ai>=1.102.0,<2",
    "pydantic-settings>=2.14.0",
    "pyjwt>=2.10.0",
    "redis>=5.0.0,<6",
    "requests>=2.32.0",
    "ruff>=0.15.0",
    "sentry-sdk[fastapi]>=2.60.0",
    "sqlmodel>=0.0.38",
    "uvicorn>=0.48.0",
    "websockets>=13.0",
]

[tool.ruff]
line-length = 100
exclude = ["alembic/versions/*"]

[tool.ruff.lint]
extend-select = ["I"]

[tool.ruff.lint.isort]
known-first-party = ["chat_agent"]  # Replace with your package/module name
combine-as-imports = true
lines-after-imports = 2
